# OmniRom

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  MONITORING.md  README.md  Romanization Service Roadmap.md  pyproject.toml  render.yaml  requirements.txt  test_output.json  test_urdu.py
.github/prompts/: plan-omniRom.prompt.md
.github/workflows/: test.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md
.planning/phases/02-specialists/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/03-performance/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md
.planning/phases/04-advanced/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/research/: FREE_ALTERNATIVES.md  SUMMARY.md
app/: __init__.py  main.py
app/api/: batch.py  cache.py  files.py  languages.py  romanize.py  stats.py
app/core/: cache.py  detector.py  stats.py  styler.py
app/engines/: arabic_urdu_romanizer.py  chinese_engine.py  google_translate.py  icu_engine.py  indic_engine.py  japanese_engine.py  korean_engine.py  router.py  uroman_engine.py
app/middleware/: logging.py  rate_limit.py
app/schemas/: romanize.py
tests/: test_api.py  test_detector.py  test_engines.py
