[project]
name = "omnirom"
version = "0.1.0"
description = "Universal Romanization Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "langid==1.1.6",
    "pypinyin==0.53.0",
    "unidecode==1.3.8",
    "redis==5.0.0",
    "python-multipart==0.0.22",
    "transliterate==1.10.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.23.0",
    "httpx==0.27.0",
    "anyio==4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
